Fix launcher icon clipped at top in closed iframe
Increase closed launcher frame to 100px and add padding for badge.

--- a/public/mysite.css
+++ b/public/mysite.css
@@ -440,6 +440,8 @@ ul {
 
 .frame__chat-wrapper--close {
   position: relative;
+  padding-top: 8px;
+  box-sizing: border-box;
 }
 
 .frame__chat-count-messages-wrapper {
@@ -459,7 +461,7 @@ ul {
   -ms-flex-pack: center;
   justify-content: center;
   right: 0;
-  top: -7px;
+  top: 0;
   z-index: 1;
   -webkit-animation: jedidesk-launcher-in var(--jd-duration-slow) var(--jd-ease-out) backwards;
   animation: jedidesk-launcher-in var(--jd-duration-slow) var(--jd-ease-out) backwards;
